<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity4">
    <item
        android:id="@+id/action_menu_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="100"
        android:title="@string/action_location"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_examine"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/action_examine"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_menu_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/icon_menu_exit_n"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
