<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weidukeji.agriculture.activity.MainActivity2">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/container3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/layout_main_content"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_bottom_bar_height"
                android:background="@drawable/navigate_bar_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_btn_news"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/selector_main_news"
                    android:text="@string/nearby" />

                <RadioButton
                    android:id="@+id/radio_btn_rss"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/selector_main_rss"
                    android:text="@string/discovery" />

                <RadioButton
                    android:id="@+id/radio_btn_message"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/selector_main_message"
                    android:text="@string/message" />

                <RadioButton
                    android:id="@+id/radio_btn_user"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/selector_main_user_center"
                    android:text="@string/user" />
            </RadioGroup>

        </LinearLayout>
    </FrameLayout>


    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <RelativeLayout
        android:id="@+id/linearDrawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/grey_background"
        >
        <include
            android:id="@+id/navigationDrawerListViewWrapper"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            layout="@layout/navigation_drawer_list_view" />
        <RelativeLayout
            android:id="@+id/userDrawerHeader"
            android:layout_alignTop="@+id/navigationDrawerListViewWrapper"
            android:background="@color/holo_blue_dark"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="@dimen/navigation_drawer_personal_data_layout_height">

            <ImageView
                android:id="@+id/drawerUserImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/my_photo_for_drawer" />

            <TextView
                android:id="@+id/drawerUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/drawerUserImage"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/drawerUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/drawerUserName"
                android:layout_below="@+id/drawerUserName"
                android:text="@string/user_email"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_micro" />

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_default_height"
            android:layout_alignBottom="@+id/navigationDrawerListViewWrapper"
            android:background="@color/holo_blue_dark"
            android:gravity="center">

            <Button
                android:id="@+id/btn_setting"
                style="@style/Wrap"
                android:background="@color/transparent"
                android:drawableLeft="@android:drawable/ic_menu_manage"
                android:drawablePadding="@dimen/widget_pad"
                android:text="@string/action_settings"
                android:textSize="@dimen/text_size_micro"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_app_face"
                style="@style/Wrap"
                android:layout_toRightOf="@+id/btn_setting"
                android:layout_marginLeft="@dimen/margin_horizontal"
                android:background="@color/transparent"
                android:drawableLeft="@android:drawable/ic_input_get"
                android:drawablePadding="@dimen/widget_pad"
                android:text="@string/action_mode"
                android:textSize="@dimen/text_size_micro"
                android:textColor="@color/white" />

        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
