<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weidukeji.agriculture.activity.MainActivity2">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/layout_main_content"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_bottom_bar_height"
                android:background="@drawable/navigate_bar_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_btn_news"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/selector_main_news"
                    android:text="@string/nearby" />

                <RadioButton
                    android:id="@+id/radio_btn_rss"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/selector_main_rss"
                    android:text="@string/discovery" />

                <RadioButton
                    android:id="@+id/radio_btn_message"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/selector_main_message"
                    android:text="@string/message" />

                <RadioButton
                    android:id="@+id/radio_btn_user"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/selector_main_user_center"
                    android:text="@string/user" />
            </RadioGroup>

        </LinearLayout>
    </FrameLayout>


    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
        <fragment
            android:id="@+id/navigation_drawer"
            android:name="com.weidukeji.agriculture.activity.NavigationDrawerFragment"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            tools:layout="@layout/fragment_navigation_drawer2" />
</android.support.v4.widget.DrawerLayout>
